[tool.poetry]
name = "reqtest"
version = "0.0.1"
description = "Automate everything HTTP."
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
repository = "https://github.com/vcokltfre/reqtest"
keywords = ["reqtest", "requests", "http", "automation", "testing"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
